2010-09-14  Darin Adler  <darin@apple.com>

        Reviewed by Geoffrey Garen.

        Sort with non-numeric custom sort function fails on array with length but no values
        https://bugs.webkit.org/show_bug.cgi?id=45781

        * runtime/JSArray.cpp:
        (JSC::JSArray::sort): Replaced early exit for an array of length zero to instead
        exit for any array without values, even if it has a non-0 length.

2010-09-14  Steve Falkenburg  <sfalken@apple.com>

        Windows production build fix.
        Roll out r65143.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreGenerated.make:

2010-09-14  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Darin Adler.

        Share UnicodeMacrosFromICU.h
        https://bugs.webkit.org/show_bug.cgi?id=45710

        glib, qt4 and wince use the same macros from ICU.
        Remove the code duplication and use the same header file.

        * wtf/unicode/UnicodeMacrosFromICU.h: Copied from JavaScriptCore/wtf/unicode/glib/UnicodeMacrosFromICU.h.
        * wtf/unicode/glib/UnicodeMacrosFromICU.h: Removed.
        * wtf/unicode/qt4/UnicodeQt4.h:
        * wtf/unicode/wince/UnicodeWince.h:

2010-09-13  Darin Adler  <darin@apple.com>

        Reviewed by Adam Barth.

        Preparation for eliminating deprecatedParseURL
        https://bugs.webkit.org/show_bug.cgi?id=45695

        * wtf/text/WTFString.h: Added isAllSpecialCharacters, moved here from
        the HTML tree builder.

2010-09-13  Darin Fisher  <darin@chromium.org>

        Reviewed by David Levin.

        Add option to conditionally compile smooth scrolling support.
        https://bugs.webkit.org/show_bug.cgi?id=45689

        ENABLE(SMOOTH_SCROLLING) is disabled by default for all platforms.

        * wtf/Platform.h:

2010-09-13  Adam Roben  <aroben@apple.com>

        Copy JavaScriptCore's generated sources to the right directory

        * JavaScriptCore.vcproj/JavaScriptCore.make: Fixed typo.
